--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,25 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_maps">Map</string>
+    <string name="stats" >
+
+            ArcGIS Corona Virus Datasets.\n
+            https://services1.arcgis.com/0MSEUqKaxRlEPj5g/arcgis/rest/services/ncov_cases/FeatureServer/1/query\n\n
+
+            Esri Proprietary Rights Acknowledgment\n
+            Copyright © 1995–2019 Esri.\n
+            All rights reserved.\n
+            Published in the United States of America.\n
+
+            The information contained in this work is the exclusive property of Environmental Systems Research Institute, Inc. (Esri), and any respective copyright owners. This work is protected under United States copyright law and other international copyright treaties and conventions.\n\n
+
+            Esri grants the recipient of the Esri information contained within the esri.com Web site the right to freely reproduce, redistribute, rebroadcast, and/or retransmit this information for personal, noncommercial purposes, including teaching, classroom use, scholarship, and/or research, subject to the fair use rights enumerated in sections 107 and 108 of the Copyright Act (Title 17 of the United States Code). All copies, whether in whole or in part, shall include the appropriate Esri copyright notice.\n\n
+
+            No part of this work may be reproduced or transmitted for commercial purposes, in any form or by any means, electronic or mechanical, including photocopying and recording, or by any information storage or retrieval system, except as expressly permitted in writing by Esri. Requests by mail should be addressed to Director, Contracts and Legal Department, Esri, 380 New York Street, Redlands, California 92373-8100, USA.\n\n
+
+            Questions or requests regarding permissions may be sent by e-mail.\n
+            Digital Millennium Copyright Act Policy\n
+            The information contained in the home page is subject to change without notice.\n
+
+    </string>
 </resources>
